# improc-petrsu-gtk

./: .gitlab-ci.yml  Cargo.toml
src/: main.rs
src/cli/: cli.yml  mod.rs
src/cli/convert_to_binary_handler/: convert_to_binary_config.rs  mod.rs
src/cli/skeletonize_handler/: mod.rs  skeletonize_config.rs
src/gtk_ui/: app_state.rs  mod.rs  ui.glade
